nelisquare (0.4.8) stable; urgency=low
  * active dev

 -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 08 Nov 2012 15:02:27 +0400

nelisquare (0.4.7) stable; urgency=low
  * tips support
  * unreaded notifications marked
  * dark theme (beta)
  * user profile updates
  * venuemap page, route to venue (beta)
  * layout updates, batch loading of stuff

 -- Basil Semuonov <basil.semuonov@gmail.com>  Wed, 07 Nov 2012 23:00:00 +0400

nelisquare (0.4.6) stable; urgency=low
  * likes, comments count preview at checkin feed and history
  * checkins feed autoupdate
  * gps uplock timeout
  * notification fixes
  * Molo.me integration is supported. Make cool photos for upload at nelisquare with one click.
  * photo swype while at venue gallery.
  * layout and theme updates

 -- Basil Semuonov <basil.semuonov@gmail.com>  Mon, 29 Oct 2012 22:33:43 +0400

nelisquare (0.4.5) stable; urgency=low
  * layout and theme updates
  * photos browser at venues added.
  * pages now holds their data w/o reloads.
  * core window and objects updates.

 -- Basil Semuonov <basil.semuonov@gmail.com>  Thu, 25 Oct 2012 15:07:44 +0400

nelisquare (0.4.4) stable; urgency=low
  * likes on checkins, venues added
  * user mayorships, checkins lists added
  * changelog message at update dialog
  * bug fixes, layout updates.

 -- Basil Semuonov <basil.semuonov@gmail.com>  Tue, 23 Oct 2012 22:08:08 +0400

nelisquare (0.4.3) stable; urgency=low
  * update checker implemented for developer and stable versions.
  * photo gallery performance fix.
  * cache size + reset option

 -- Basil Semuonov <basil.semuonov@gmail.com>  Tue, 23 Oct 2012 17:36:17 +0400

nelisquare (0.4.2) stable; urgency=low
  * badges list for user and badge info pages added

 -- Basil Semuonov <basil.semuonov@gmail.com>  Sun, 21 Oct 2012 23:53:40 +0400

nelisquare (0.4.1) stable; urgency=low
  * buttons for maemo are back!
  * menubar items crop on maemo is fixed.
