@@ -36,7 +36,7 @@ QT += network
 DEFINES += QT_USE_FAST_CONCATENATION QT_USE_FAST_OPERATOR_PLUS
 DEFINES += VS_ENABLE_SPLASH
 
-VERSION = 0.4.7
+VERSION = 0.4
 PACKAGENAME = com.thecust.nelisquare
 
 win32 {
