@@ -1,3 +1,3 @@
-var build = '201211301145';
+var build = '201212032058';
 var version = "0.4.8";
-var changelog = ' - core api engine update completed  - api key changed  - feed updates & all latest checkins  - bug fixes';
+var changelog = ' - api key changed  - feed updates & all latest checkins  - pan&pinch on maps and full photos  - new theming engine & api update  - bug fixes, layout updates';
